# Metatron

./: .dockerignore  .gitattributes  .gitignore  ATTACK_COVERAGE_BACKLOG.md  CONTAINER_TVR_REBUILD.md  DEPLOYMENT.md  EVIDENCE_PACKAGE_SUMMARY.md  MITRE_COVERAGE_ASSESSMENT.md  ML layer.txt  PHASES_2_TO_5_UPGRADE_ROADMAP.md  PHASE_1_EXECUTION_STATUS.md  PROMOTION_ROADMAP.md  QUICK_REFERENCE_PHASE_1_COMPLETE.md  README.md  REAL_EVIDENCE_UPGRADE_EXECUTION_SUMMARY.md  SERAPH_INTEGRATIONS_OVERVIEW.md  SYSTEM_FUNCTIONALITY.md  backend_test.py  build_log.txt  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  e2e_system_test.py  fix-pywin32.ps1  frontend_build_output.txt  full_feature_test.py  live_covenant_gauntlet.py  mcp_server.py  metatron_generated_tvrs_20260427.json  metatron_honest_tvr_classification_20260427.json  redeploy-arda.ps1  run-arda-standalone.ps1  seraph_code_backup_20260416_115731.tar.gz.part-00.chunk  seraph_code_backup_20260416_115731.tar.gz.part-01.chunk  seraph_db_backup_20260416_115743.archive.part-00.chunk  seraph_db_backup_20260416_115743.archive.part-01.chunk  seraph_db_backup_20260416_115743.archive.part-02.chunk  seraph_db_backup_20260416_115743.archive.part-03.chunk  seraph_db_backup_20260416_115743.archive.part-04.chunk  seraph_db_backup_20260416_115743.archive.part-05.chunk  (+6 more)
.emergent/: emergent.yml  (+1 more)
Arda Windows/: README.md  pyproject.toml
Arda Windows/src/arda_windows/: __init__.py  interfaces.py  models.py  world_manifold.py
Arda Windows/tests/: test_arkime_integration.py  test_linux_providers.py  test_phase1_providers.py
(+32606 files in other folders)
