[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "arda-windows"
version = "0.3.0"
description = "ARDA cross-platform adapter layer: Windows-native and Linux-native providers for attestation, evidence, enforcement, and sovereignty monitoring."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Byron", email = "byron@seraph.local" }]

dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
arkime = [
    "requests>=2.31",
]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
